Add patents page and first patent

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,3 +26,16 @@
   url       = {https://arxiv.org/abs/2504.14898},
   selected  = {true}
 }
+
+@misc{hamelmann2025patent,
+  title        = {Systems and methods for electrode position determination for fetal monitoring system},
+  author       = {Hamelmann, Paul Christoph and Hidalgo Araya, Marco and Rabotti, Chiara},
+  year         = {2025},
+  month        = {May},
+  number       = {WO2025087949A1},
+  howpublished = {Patent},
+  assignee     = {Koninklijke Philips NV},
+  url          = {https://patents.google.com/patent/WO2025087949A1/en},
+  note         = {Filed: 2024-10-23, Priority: 2023-10-26, Status: Pending},
+  selected     = {true}
+}
