Add HTML link field to patent entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,6 +36,7 @@
   howpublished = {Patent},
   assignee     = {Koninklijke Philips NV},
   url          = {https://patents.google.com/patent/WO2025087949A1/en},
+  html         = {https://patents.google.com/patent/WO2025087949A1/en},
   note         = {Filed: 2024-10-23, Priority: 2023-10-26, Status: Pending},
   selected     = {true}
 }
